# BMS

./: .gitignore  AGENTS.md  DESIGN.md  README.md  mise.toml  pyproject.toml  ruff.toml  todo.md
.github/workflows/: pages.yml
data/: README.md
docs/: README.md  beatoraja-jbmstable-table-json.md  filter-config-schema.md  github-actions-songdata-table-filter.md  github-pages-publish-guide.md  github-releases-songdata.md  index.html  level-stats.html  pages-ui-config.md  requirements-filtered-bms-folder-tool.md
docs/assets/: k-original-ui.css  level-stats-main.js  pages-index-column-runtime.js  pages-index-main.js  theme-toggle.js
docs/bms/: README.md  beatoraja-difficulty-table-url-and-filtered-publish.md  requirements-filtered-bms-folder-tool.md
docs/table/: index.html  pages_ui_config.json
scripts/: README.md  commit-songdata-push.bat  commit-songdata-push.sh  upload-songdata-github-release.bat  upload-songdata-github-release.local.ps1.example  upload-songdata-github-release.ps1  upload-songdata-github-release.secrets.template.txt  upload-songdata-github-release.secrets.txt.example
tools/table-filter/: README.md  _io_helpers.py  _level_normalizer.py  beatoraja_rows.py  build_pages_table.py  check_browser_rows_pages_ui.py  check_filter_config_example_sync.py  filter_config.example.json  filter_config.json  filter_table.py  http_fetch.py  level_stats.py  smoke_check_outputs.py  songdata_dedupe.py  source_tables.json  source_tables.py  sql_where_guard.py
tools/table-filter/config/: filter_config.example.json  filter_config.json
(+5 files in other folders)
